--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ org.gradle.jvmargs=-Xmx1G
 # Mod Properties
 	mod_version = 0.1
 	maven_group = com.deep.rock.galactic.mod
-	archives_base_name = Deep-Rock-Galactic-Mod
+	archives_base_name = deep-rock-galactic-mod
 
 # Dependencies
 	fabric_version=0.47.8+1.18.2
