--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ org.gradle.jvmargs=-Xmx1G
 
 # Mod Properties
 	mod_version = 0.1
-	maven_group = com.deep.rock.galactic.mod
+	maven_group = net.deep.rock.galactic.mod
 	archives_base_name = deep-rock-galactic-mod
 
 # Dependencies
